--- a/index.html
+++ b/index.html
@@ -1,25 +1,174 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Clean Air Project - Videos</title>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Clean Air Project — Videos</title>
+
 <style>
-  body { font-family: Arial, sans-serif; background: #f0f4f8; margin:0; }
-  header { background:#0056b3; color:#fff; padding:12px 20px; display:flex; justify-content:space-between; align-items:center; }
-  header .brand { font-size:20px; font-weight:bold; }
-  .btn { padding:8px 12px; border:none; border-radius:6px; cursor:pointer; font-weight:bold; }
-  .btn.login { background:#28a745; color:#fff; }
-  .container { max-width:1000px; margin:20px auto; padding:0 15px; }
-  #adminPanel { display:none; background:#fff; padding:15px; border-radius:10px; box-shadow:0 4px 10px rgba(0,0,0,0.15); margin-bottom:20px; }
-  #videosContainer { display:grid; grid-template-columns:repeat(auto-fill,minmax(300px,1fr)); gap:18px; }
-  .video-card { background:#fff; border-radius:10px; padding:10px; box-shadow:0 4px 10px rgba(0,0,0,0.1); }
-  .video-card iframe { width:100%; height:200px; border:0; border-radius:6px; }
-  .video-card .title { font-weight:bold; margin:8px 0; }
-  .delete-btn { background:#d63939; color:#fff; border:none; padding:6px 10px; border-radius:6px; cursor:pointer; margin-top:5px; }
+  :root{
+    --primary-blue:#0056b3;
+    --accent:#28a745;
+    --bg:#f4f6f9;
+    --card-shadow: rgba(0,0,0,0.08);
+    --text:#222;
+    --muted:#666;
+  }
+
+  body{
+    margin:0;
+    font-family:Inter,system-ui,Arial,sans-serif;
+    background:var(--bg);
+    color:var(--text);
+  }
+
+  header{
+    background:var(--primary-blue);
+    color:#fff;
+    padding:14px 20px;
+    display:flex;
+    align-items:center;
+    justify-content:space-between;
+    box-shadow:0 4px 10px var(--card-shadow);
+  }
+
+  .brand{
+    font-weight:700;
+    font-size:20px;
+  }
+
+  .btn{
+    border:0;
+    padding:8px 12px;
+    border-radius:8px;
+    cursor:pointer;
+    font-weight:600;
+  }
+
+  .btn.login{
+    background:var(--accent);
+    color:#fff;
+  }
+
+  .btn.upload{
+    background:#043b83;
+    color:#fff;
+  }
+
+  .container{
+    max-width:1000px;
+    margin:28px auto;
+    padding:0 18px;
+  }
+
+  #adminPanel{
+    display:none;
+    background:#fff;
+    border-radius:12px;
+    padding:14px;
+    box-shadow:0 6px 20px var(--card-shadow);
+    margin-bottom:18px;
+    border-top:4px solid var(--primary-blue);
+  }
+
+  .notice{
+    background:#fff7c0;
+    padding:10px;
+    border-radius:8px;
+    margin-bottom:12px;
+    color:#6a5600;
+  }
+
+  h1.section{
+    margin:0 0 8px;
+    font-size:20px;
+    color:#0b6b2f;
+  }
+
+  /* ---------------------------------------------------
+       PEXELS-STYLE MASONRY GRID
+  -----------------------------------------------------*/
+
+  /* YOUTUBE-STYLE CLEAN GRID */
+.videos-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 18px;
+}
+
+.video-card {
+  background: #fff;
+  border-radius: 14px;
+  overflow: hidden;
+  box-shadow: 0 6px 18px rgba(0,0,0,0.08);
+  transition: transform 0.2s ease, box-shadow 0.3s ease;
+}
+
+.video-card:hover {
+  transform: translateY(-4px);
+  box-shadow: 0 12px 26px rgba(0,0,0,0.12);
+}
+
+/* force same video height */
+video {
+  width: 100%;
+  height: 200px;   /* <<--- SAME HEIGHT FOR ALL VIDEOS */
+  object-fit: cover; /* ensures perfect crop */
+  background: #000;
+}
+
+
+  @media (max-width:900px) {
+    .videos-grid{ column-count: 2; }
+  }
+
+  @media (max-width:600px) {
+    .videos-grid{ column-count: 1; }
+  }
+
+  .video-card{
+    display: inline-block;
+    background:#fff;
+    margin:0 0 18px;
+    width:100%;
+    border-radius:14px;
+    overflow:hidden;
+    box-shadow:0 8px 18px rgba(0,0,0,0.08);
+    transition: transform 0.2s ease, box-shadow 0.3s ease;
+  }
+
+  .video-card:hover{
+    transform:translateY(-4px);
+    box-shadow:0 12px 26px rgba(0,0,0,0.12);
+  }
+
+  video{
+    width:100%;
+    border-radius:0;
+    display:block;
+    background:#000;
+  }
+
+  .delete-btn{
+    background:#d63939;
+    color:#fff;
+    border-radius:8px;
+    padding:6px 10px;
+    border:none;
+    cursor:pointer;
+    margin:10px;
+  }
+
+  .small{
+    color:var(--muted);
+    font-size:13px;
+    padding:8px;
+  }
 </style>
+
 <script src="https://www.gstatic.com/firebasejs/10.12.3/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.12.3/firebase-firestore-compat.js"></script>
+
 </head>
 <body>
 
@@ -29,34 +178,57 @@
 </header>
 
 <div class="container">
+
+  <div id="status" class="notice" style="display:none"></div>
+
   <div id="adminPanel">
-    <h2>Upload Video</h2>
-    <input type="text" id="videoTitle" placeholder="Video Title" style="width:100%; margin-bottom:10px; padding:6px;">
-    <input type="text" id="youtubeURL" placeholder="Paste YouTube link (Creative Commons)" style="width:100%; padding:6px; margin-bottom:10px;">
-    <button class="btn login" id="uploadBtn">Add Video</button>
+    <h1 class="section">Admin Upload Portal</h1>
+    <input type="file" id="uploadInput" accept="video/*">
+    <button class="btn upload" id="uploadBtn">Upload Video</button>
+    <p class="small">Uploads go to Cloudinary; Firestore stores the video list so everyone can see them.</p>
   </div>
 
-  <h2>Video Library</h2>
-  <div id="videosContainer"></div>
+  <h1 class="section">Featured Educational Videos</h1>
+  <div id="videosContainer" class="videos-grid"></div>
 </div>
 
 <script>
-// ----------- FIREBASE CONFIG -----------
+/* ------------------------- CONFIG ------------------------- */
 const firebaseConfig = {
   apiKey: "AIzaSyDuZTgTY5AeOyd-5n7sGgM2hf1Qw2NJL-A",
   authDomain: "clean-air-project-allenps.firebaseapp.com",
-  projectId: "clean-air-project-allenps"
+  projectId: "clean-air-project-allenps",
+  storageBucket: "clean-air-project-allenps.firebasestorage.app",
+  messagingSenderId: "62865972648",
+  appId: "1:62865972648:web:b3448c1e3e486ab3aa919d"
 };
+
+const CLOUD_NAME = "dlg33imal";
+const UNSIGNED_UPLOAD_PRESET = "unsigned_videos";
+
+const ADMIN_EMAIL = "admin@gmail.com";
+const ADMIN_PASS = "123456";
+
+/* -------------------- INIT FIREBASE ----------------------- */
 firebase.initializeApp(firebaseConfig);
 const db = firebase.firestore();
 
-// ----------- ADMIN LOGIN -----------
-const ADMIN_EMAIL = "admin@gmail.com";
-const ADMIN_PASS = "123456";
-let isAdmin = false;
+/* ------------------------- UI ----------------------------- */
 const loginBtn = document.getElementById("loginBtn");
 const adminPanel = document.getElementById("adminPanel");
+const uploadInput = document.getElementById("uploadInput");
+const uploadBtn = document.getElementById("uploadBtn");
+const statusBox = document.getElementById("status");
+const videosContainer = document.getElementById("videosContainer");
 
+let isAdmin = false;
+
+function showStatus(msg){
+  statusBox.style.display = msg ? "block" : "none";
+  statusBox.textContent = msg;
+}
+
+/* ----------------------- LOGIN ----------------------------- */
 loginBtn.addEventListener("click", () => {
   const email = prompt("Admin email:");
   const pass = prompt("Password:");
@@ -64,67 +236,95 @@ loginBtn.addEventListener("click", () => {
     isAdmin = true;
     adminPanel.style.display = "block";
     loginBtn.style.display = "none";
+    showStatus("Admin mode enabled — you can upload and delete videos.");
     loadVideos();
-  } else alert("Incorrect login.");
+  } else {
+    alert("Incorrect login.");
+  }
 });
 
-// ----------- CONVERT YOUTUBE LINK TO EMBED -----------
-function convertToEmbed(url){
-  url = url.trim();
-  url = url.replace("m.youtube.com","www.youtube.com");
-  url = url.replace("youtube.com/shorts/","youtube.com/watch?v=");
-  if(url.includes("youtu.be/")){
-    const id = url.split("youtu.be/")[1].split("?")[0];
-    return "https://www.youtube.com/embed/" + id;
-  }
-  if(url.includes("watch?v=")){
-    const id = url.split("watch?v=")[1].split("&")[0];
-    return "https://www.youtube.com/embed/" + id;
-  }
-  return url;
-}
+/* ---------------------- UPLOAD ----------------------------- */
+uploadBtn.addEventListener("click", async () => {
+  const file = uploadInput.files[0];
+  if(!file) return alert("Select a video first.");
 
-// ----------- ADD VIDEO -----------
-document.getElementById("uploadBtn").addEventListener("click", async ()=>{
-  const title = document.getElementById("videoTitle").value.trim();
-  const yt = document.getElementById("youtubeURL").value.trim();
-  if(!title || !yt) return alert("Enter title and YouTube link.");
-  const embedURL = convertToEmbed(yt);
-  await db.collection("videos").add({
-    title: title,
-    url: embedURL,
-    ts: firebase.firestore.FieldValue.serverTimestamp()
-  });
-  document.getElementById("videoTitle").value="";
-  document.getElementById("youtubeURL").value="";
-  loadVideos();
+  showStatus("Uploading to Cloudinary… This may take time.");
+
+  try {
+    const form = new FormData();
+    form.append("file", file);
+    form.append("upload_preset", UNSIGNED_UPLOAD_PRESET);
+
+    const resp = await fetch(
+      `https://api.cloudinary.com/v1_1/${CLOUD_NAME}/video/upload`,
+      { method: "POST", body: form }
+    );
+
+    const result = await resp.json();
+    if(result.error) throw new Error(result.error.message);
+
+    const videoURL =
+      `https://res.cloudinary.com/${CLOUD_NAME}/video/upload/f_mp4/${result.public_id}.mp4`;
+
+    await db.collection("videos").add({
+      url: videoURL,
+      public_id: result.public_id,
+      ts: firebase.firestore.FieldValue.serverTimestamp()
+    });
+
+    showStatus("Upload complete!");
+    uploadInput.value = "";
+    loadVideos();
+
+  } catch(err) {
+    alert("Upload failed: " + err.message);
+    showStatus("");
+  }
 });
 
-// ----------- LOAD VIDEOS -----------
+/* ---------------------- LOAD VIDEOS ------------------------- */
 async function loadVideos(){
-  const container = document.getElementById("videosContainer");
-  container.innerHTML="";
-  const snap = await db.collection("videos").orderBy("ts","desc").get();
-  snap.forEach(doc=>{
-    const data = doc.data();
-    const card = document.createElement("div");
-    card.className="video-card";
-    card.innerHTML = `<div class="title">${data.title}</div><iframe src="${data.url}" allowfullscreen></iframe>`;
-    if(isAdmin){
-      const del = document.createElement("button");
-      del.className="delete-btn";
-      del.textContent="Delete";
-      del.onclick = async ()=>{
-        if(!confirm("Delete this video?")) return;
-        await db.collection("videos").doc(doc.id).delete();
-        loadVideos();
-      };
-      card.appendChild(del);
-    }
-    container.appendChild(card);
-  });
+  videosContainer.innerHTML = "";
+  showStatus("Loading videos…");
+
+  try {
+    const snap = await db.collection("videos").orderBy("ts", "desc").get();
+    snap.forEach(doc => addVideoCard({ id: doc.id, ...doc.data() }));
+    showStatus("");
+  } catch(err){
+    showStatus("Error loading videos. Check Firestore rules.");
+  }
 }
 
+/* ---------------------- VIDEO CARD -------------------------- */
+function addVideoCard(doc){
+  const card = document.createElement("div");
+  card.className = "video-card";
+
+  card.innerHTML = `
+    <video controls muted playsinline preload="metadata">
+      <source src="${doc.url}" type="video/mp4">
+    </video>
+    <div class="small">Uploaded</div>
+  `;
+
+  if(isAdmin){
+    const del = document.createElement("button");
+    del.className = "delete-btn";
+    del.textContent = "Delete";
+    del.onclick = async () => {
+      if(!confirm("Delete this video?")) return;
+      await db.collection("videos").doc(doc.id).delete();
+      card.remove();
+      showStatus("Deleted.");
+    };
+    card.appendChild(del);
+  }
+
+  videosContainer.appendChild(card);
+}
+
+/* ---------------------- START ------------------------------- */
 window.addEventListener("load", loadVideos);
 </script>
 
